--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/dudeDeni/Project-Movies#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
   }
