--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/dudeDeni/Project-Movies#readme",
   "dependencies": {
+    "bootstrap": "^3.4.1",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0",
